We shouldn't modify the document on saving, by adding a masterpagename to first paragraph which is not what the user would expect. Think if the user would later on copy paste this paragraph to somewhere in the middle of another master page. That would copy the masterpagename to causing an unwanted pagebreak and masterpage change

This was originally added in 9472dc5b to fix pagestyle not being saved, but a quick check
shows that the original bug https://bugs.kde.org/show_bug.cgi?id=184858 is not reopenend by
removing this code now.

BUG:298899